--- a/download.html
+++ b/download.html
@@ -21,37 +21,37 @@
 
 <h2><span class='mw-headline' id='Windows'> Windows </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.2/xowa_app_windows_64_v3.1.4.2.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.5.1/xowa_app_windows_64_v3.1.5.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.2/xowa_app_windows_v3.1.4.2.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.5.1/xowa_app_windows_v3.1.5.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Linux'> Linux </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.2/xowa_app_linux_64_v3.1.4.2.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.5.1/xowa_app_linux_64_v3.1.5.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.2/xowa_app_linux_v3.1.4.2.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.5.1/xowa_app_linux_v3.1.5.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Mac_OS_X'> Mac OS X </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.2/xowa_app_macosx_64_v3.1.4.2.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.5.1/xowa_app_macosx_64_v3.1.5.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.2/xowa_app_macosx_v3.1.4.2.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.5.1/xowa_app_macosx_v3.1.5.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Android'> Android </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.4.1/xowa_app_android_v3.1.4.1.apk" class="external text" rel="nofollow">Android</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v3.1.5.1/xowa_app_android_v3.1.5.1.apk" class="external text" rel="nofollow">Android</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Source'> Source code </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/archive/v3.1.4.2.zip" class="external text" rel="nofollow">Source code</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/archive/v3.1.5.1.zip" class="external text" rel="nofollow">Source code</a>
   </li>
 </ul>
 
@@ -65,7 +65,7 @@
       <span class='mw-headline'>Change log</span>
     </h2>
     <h2>
-      <span class="mw-headline" id="v3.1.4.2_.282016-01-28.29">v3.1.4.2 (2016-01-28)</span>
+      <span class="mw-headline" id="v3.1.5.1_.282016-01-31.29">v3.1.5.1 (2016-01-31)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="Windows_.2F_Linux_.2F_Mac_OS_X">Windows / Linux / Mac OS X</span>
@@ -75,42 +75,16 @@
     </p>
     <ul>
       <li>
-        Scribunto: Add built-in function: {{PROTECTIONEXPIRY}} (resolves script error on many en.w pages; Script error: @/xowa/bin/any/xowa/xtns/Scribunto/engines/Luaj/MWServer.lua:59 vm error: gplx.Err: callParserFunction: function was not found: function=PROTECTIONEXPIRY). See: <a href="/site/en.wikipedia.org/wiki/Alaska">https://en.wikipedia.org/wiki/Alaska</a> <a href="/site/en.wikipedia.org/wiki/Earth">https://en.wikipedia.org/wiki/Earth</a>
+        Luaj: Fix frontier pattern not working. Resolves error messages for every url reference on en.w pages. EX: <code>Check |archiveurl= value (help)</code>. See: <a href="https://en.wikipedia.org/wiki/A">https://en.wikipedia.org/wiki/A</a> <a href="https://en.wikipedia.org/wiki/Earth">https://en.wikipedia.org/wiki/Earth</a>
       </li>
       <li>
-        Xtn.FlaggedRevs: Add scribunto function: getStabilitySettings (resolves script error on many en.w pages; Script error: =Module:Effective protection level:16 attempt to index ? (a nil value)). See: <a href="/site/en.wikipedia.org/wiki/A">https://en.wikipedia.org/wiki/A</a> <a href="/site/en.wikipedia.org/wiki/Animal_Farm">https://en.wikipedia.org/wiki/Animal_Farm</a> <a href="/site/en.wikipedia.org/wiki/Agriculture">https://en.wikipedia.org/wiki/Agriculture</a>
-      </li>
-    </ul>
-    <p>
-      <b>trivial</b>
-    </p>
-    <ul>
-      <li>
-        Log: Do not log warnings when building category version1 (resolves numerous non-meaningful error messages in the log file).
-      </li>
-    </ul>
-
-    <h2>
-      <span class="mw-headline" id="v3.1.4.1_.282016-01-24.29">v3.1.4.1 (2016-01-24)</span>
-    </h2>
-    <h3>
-      <span class="mw-headline" id="PC">Windows / Linux / Mac OS X</span>
-    </h3>
-    <p>
-      <b>major</b>
-    </p>
-    <ul>
-      <li>
-        Luaj: Return position as int not string when using "()" regex (resolves script error on several dozen en.d / ru.d pages ("attempt to compare string with number expected, got string")). See: <a href="https://en.wiktionary.org/wiki/%D0%BA">https://en.wiktionary.org/wiki/к</a> <a href="https://en.wiktionary.org/wiki/%D0%BA%D0%B0%D0%B3%D0%B5%D0%B1%D0%B5%D1%88%D0%BD%D0%B8%D0%BA">https://en.wiktionary.org/wiki/кагебешник</a> <a href="https://ru.wiktionary.org/wiki/плавлавка" rel="nofollow" class="external free">https://ru.wiktionary.org/wiki/плавлавка</a>
+        Luaj: Handle backslash-escaped UTF8 sequences. Resolves error messages for many references on en.w pages. EX: <code>Specials character in |encyclopedia= at position 11 (help)</code>. See: <a href="https://en.wikipedia.org/wiki/A">https://en.wikipedia.org/wiki/A</a> <a href="https://en.wikipedia.org/wiki/Earth">https://en.wikipedia.org/wiki/Earth</a>
       </li>
       <li>
-        Scribunto: Handle nested gsub calls when using callback functions (resolves script error on a few dozen en.d pages ("Unrecognized 3ms suffix pattern.")). See: <a href="https://en.wiktionary.org/wiki/%D7%9B%D7%9C%D7%91">https://en.wiktionary.org/wiki/כלב</a>
+        Core: Parse decimals using US locale, not user locale. Resolves extremely wide pie charts on many de.w pages. {detected by anonymous} See: <a href="https://de.wikipedia.org/wiki/Hausmannst%C3%A4tten">https://de.wikipedia.org/wiki/Hausmannstätten</a>
       </li>
       <li>
-        Luaj: Handle multi-byte chars in lua variables (resolves script error on a few dozen en.d pages ("attempt to concatenate nil and string")). See: <a href="https://en.wiktionary.org/wiki/%E3%81%A9%E3%81%86">https://en.wiktionary.org/wiki/どう</a> <a href="https://en.wiktionary.org/wiki/%EB%A5%BC">https://en.wiktionary.org/wiki/를</a>
-      </li>
-      <li>
-        Hzip: Handle jtidy moving &lt;span class='headline'&gt; outside of &lt;h#&gt; tag in rare combination of &lt;center&gt;, &lt;span&gt;, &lt;div&gt; (resolves a few dozen pages in en.s not showing). See: <a href="https://en.wikisource.org/wiki/On_the_Vital_Principle/Whole_text" rel="nofollow" class="external free">https://en.wikisource.org/wiki/On_the_Vital_Principle/Whole_text</a> <a href="https://en.wikisource.org/wiki/Avenarius_and_the_Standpoint_of_Pure_Experience/1" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Avenarius_and_the_Standpoint_of_Pure_Experience/1</a>
+        Xtn.Pgbnr: Add {{PAGEBANNER}} extension. Resolves pagebanner not showing up on top of wikivoyage pages. See: <a href="https://en.wikivoyage.org/wiki/Stonehenge" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Stonehenge</a> <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a> <a href="https://en.wikivoyage.org/wiki/Munich" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Munich</a> <a href="https://en.wikivoyage.org/wiki/Cumbernauld" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Cumbernauld</a> [[Help:Diagnostics/Xtns/Wikivoyage/All]]
       </li>
     </ul>
     <p>
@@ -118,19 +92,10 @@
     </p>
     <ul>
       <li>
-        Scribunto: Handle multi-byte characters for lua bracketed regular expressions (resolves nothing known). See: <a href="https://en.wiktionary.org/wiki/%E3%81%A9%E3%81%86">https://en.wiktionary.org/wiki/どう</a> <a href="https://en.wiktionary.org/wiki/%EB%A5%BC">https://en.wiktionary.org/wiki/를</a>
+        Css: Remove from core.css #content a:link {color: #0645ad;}. Resolves wikivoyage banner links showing in blue instead of white. See: <a href="https://en.wikipedia.org/wiki/Stonehenge">https://en.wikipedia.org/wiki/Stonehenge</a>
       </li>
       <li>
-        Luaj: Use HOUR_OF_DAY for os.time, not HOUR (resolves hour off by 12 for os.time calls). See: [[Help:Diagnostics/Scribunto/Luaj]]
-      </li>
-      <li>
-        Xtns.Dpl: Write href using full_db not page_txt; EX:Category:A B -&gt; Category:A_B x&gt; A B. See: <a href="https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions">https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions</a>
-      </li>
-      <li>
-        Xtns.Dpl: Encode quotes in href title (resolves broken links if page title has quotes). See: <a href="https://en.wikibooks.org/wiki/Wikibooks:Alphabetical_classification/All_Books" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/Wikibooks:Alphabetical_classification/All_Books</a>
-      </li>
-      <li>
-        Dumps.HTML: Add support for non-english File namespace (resolves many log messages when generating html dumps for non-english wikis).
+        Html: Add 'class="visible"' to content-sub node and 'client-js' to html node. Resolves extra gap at bottom of content-sub on wikivoyage pages. See: <a href="https://en.wikivoyage.org/wiki/Stonehenge" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Stonehenge</a>
       </li>
     </ul>
     <p>
@@ -138,18 +103,10 @@
     </p>
     <ul>
       <li>
-        Hzip: Write file-title with correct case-sensitivity for wikis with a case-sensitive [[File:]] namespace.
+        Xtn.Mapsources: Parse key-value pairs from nested template calls. Resolves potential incorrect values for {{#dd2dms}} .
       </li>
       <li>
-        Html: Never change title bytes when passed to Xof_file_wkr_.Ttl_standardize(title) (nothing known in pc; affects hzip check for image links). See: <a href="https://en.wiktionary.org/wiki/freedom_of_speech">https://en.wiktionary.org/wiki/freedom_of_speech</a>
-      </li>
-    </ul>
-    <p>
-      <b>doc</b>
-    </p>
-    <ul>
-      <li>
-        Home: Redefine categories for Change log.
+        Import.Dansguardian: Fix page-redirection-deletion for en.wikipedia.org.
       </li>
     </ul>
     <h3>
@@ -160,16 +117,22 @@
     </p>
     <ul>
       <li>
-        Search: Do additional searches to return some results sooner.
+        Css: Show navbox and other tables.
       </li>
       <li>
-        Image: Load images directly in html if page has already been viewed.
+        Css: Always center table.
       </li>
       <li>
-        Url: Convert plus to space (affects pages not loading if canonical_url has plus for space). See: <a href="https://en.wikipedia.org/wiki/List_of_Fire_Emblem:Shadow_Dragon_characters">https://en.wikipedia.org/wiki/List_of_Fire_Emblem:Shadow_Dragon_characters</a>
+        File: Replace img.src ? with %3F. Resolves images with question marks not showing. See: <a href="https://en.wikipedia.org/wiki/Cleopatra">https://en.wikipedia.org/wiki/Cleopatra</a> <a href="https://en.wikipedia.org/wiki/Cave_paintings">https://en.wikipedia.org/wiki/Cave_paintings</a>
       </li>
       <li>
-        App: Add "send email" to crash reporting.
+        Xtn.Hiero: Show hieroglyphics (available in 2016-01 English Wikipedia release). Resolves hieroglyphics not appearing. See: <a href="https://en.wikipedia.org/wiki/Cleopatra">https://en.wikipedia.org/wiki/Cleopatra</a>
+      </li>
+      <li>
+        Css: Force table content to be transparent color in night mode.
+      </li>
+      <li>
+        Log: Deactivate logging to external SD card (again). {detected by anonymous}
       </li>
     </ul>
     <p>
