--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,99 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_v3.2.1.1_.282016-02-06_20:45_Sun.29">Release: v3.2.1.1 (2016-02-06 20:45 Sun)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="Release_new_image_update_for_English_Wikipedia_.282016-01.29">Release new image update for English Wikipedia (2016-01)</span>
+    </h3>
+    <p>
+      I was a little late this month due to build issues. The direct link is <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-01-13_file_v2b.7z" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-01-13_file_v2b.7z</a>
+    </p>
+    <h3>
+      <span class="mw-headline" id="Release_new_wikis_for_English_Wikis_.282016-01.29">Release new wikis for English Wikis (2016-01)</span>
+    </h3>
+    <p>
+      I've also updated all English Wikis. I generated Android versions of each as well, and will upload during the week if they proof well. The links are at <a href="https://archive.org/details/Xowa_enwiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_enwiki_latest</a> and they are listed by domain (EX: <a href="https://en.wiktionary.org" rel="nofollow" class="external free">https://en.wiktionary.org</a>)
+    </p>
+    <h3>
+      <span class="mw-headline" id="Fix_for_search_not_working">Fix for search not working</span>
+    </h3>
+    <p>
+      This was a bug that I introduced back in 3.1.1. Title search doesn't work. For example: <a href="/site/en.wikipedia.org/wiki/Special:Search?search=Earth&amp;fulltext=y">https://en.wikipedia.org/wiki/Special:Search?search=Earth&amp;fulltext=y</a> .
+    </p>
+    <p>
+      If you've built a wiki with any 3.1.* version, you will have to rebuild it. You can do this with the following:
+    </p>
+    <ul>
+      <li>
+        Go to <a href="/wiki/Help:Wiki_maintenance" title="Help:Wiki maintenance">Help:Wiki maintenance</a>
+      </li>
+      <li>
+        Find your wiki and click the "Search" button
+      </li>
+      <li>
+        Scroll down to the bottom of the page and click "Run script"
+      </li>
+    </ul>
+    <p>
+      You can also rebuild the entire wiki.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Fix_for_English_Wiktionary_sections_not_expanding_correctly">Fix for English Wiktionary sections not expanding correctly</span>
+    </h3>
+    <p>
+      This bug occurs when opening up any English Wiktionary page. Each page will have Translation tables with a "Hide" / "Show" button. The following occurred when viewing these pages (for example: <a href="/site/en.wiktionary.org/wiki/green">https://en.wiktionary.org/wiki/green</a>)
+    </p>
+    <ul>
+      <li>
+        Table shows up collapsed, but button says "Hide"
+      </li>
+      <li>
+        Clicking on "Hide" only changes the button to "Show"
+      </li>
+      <li>
+        Clicking on "Show" finally expands the table
+      </li>
+    </ul>
+    <p>
+      v3.2.1 now expands these tables by default. Note that you can control the default behavior at <a href="/wiki/Help:Options/Wiki_HTML" title="Help:Options/Wiki HTML" class="xowa-visited">Help:Options/Wiki HTML</a> under Collapsible
+    </p>
+    <h3>
+      <span class="mw-headline" id="New_Raspberry_Pi_build">New Raspberry Pi build</span>
+    </h3>
+    <p>
+      This build was made possible by yonisolo. Many thanks to him for taking the initiative to get this to work. As a result of his efforts, you can now use your Raspberry Pi to run XOWA as an HTTP server.
+    </p>
+    <p>
+      Note that the GUI does not work due to SWT issues with ARM. I don't know if anyone is interested in having this work, but if so, let me know, and I'll revisit.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Android_.28No_release.29">Android (No release)</span>
+    </h3>
+    <p>
+      I'm skipping an Android release this week. I added only one-change (pinch-zoom and bottom panels), and it didn't seem worth a release.
+    </p>
+    <h3>
+      <span class="mw-headline" id="Next_release:_v3.2.2">Next release: v3.2.2</span>
+    </h3>
+    <p>
+      I was planning to improve the Android search version this week, but ended up spending some time on the English Wiki builds as well as underlying database code.
+    </p>
+    <p>
+      I'm still going to work on this database code this week. My aims are the following:
+    </p>
+    <ul>
+      <li>
+        Add a feature to auto-sync the current English Wikipedia images set (they're around 90 GB)
+      </li>
+      <li>
+        Add some indices to improve performance on the Android search.
+      </li>
+    </ul>
+    <p>
+      For wikis, I'm going to work on French Wiki.
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_v3.1.5.1_.282016-01-31_22:00_Sun.29">Release: v3.1.5.1 (2016-01-31 22:00 Sun)</span>
     </h2>
     <p>
