--- a/image_dbs.html
+++ b/image_dbs.html
@@ -399,22 +399,54 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://en.wiktionary.org/wiki/">https://en.wiktionary.org</a>
+            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-13
+            2016-01-13
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-05-04
+            2016-02-06
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            1.6
+            4.2
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa (v2b)
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-01-13_file_v2b.7z" rel="nofollow" class="external text">images.update.2016-01-13.v2b (.xowa)</a>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="/site/en.wiktionary.org/wiki/">https://en.wiktionary.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-01-12
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-02-06
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            1.7
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -424,29 +456,30 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiktionary_2015-04-13.7z" class="external text" rel="nofollow">wiki and images</a>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiktionary_2016-01-12_text.7z" rel="nofollow" class="external text">wiki</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiktionary_2016-01-12_file.7z" rel="nofollow" class="external text">images</a>
           </p>
         </td>
       </tr>
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://en.wikisource.org/wiki/">https://en.wikisource.org</a>
+            <a href="/site/en.wikisource.org/wiki/">https://en.wikisource.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-10
+            2016-01-12
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-05-04
+            2016-02-06
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            9.5
+            11.3
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -456,29 +489,30 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikisource_2015-04-10.7z" class="external text" rel="nofollow">wiki and images</a>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikisource_2016-01-12_text.7z" rel="nofollow" class="external text">wiki</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikisource_2016-01-12_file.7z" rel="nofollow" class="external text">images</a>
           </p>
         </td>
       </tr>
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://en.wikivoyage.org/wiki/">https://en.wikivoyage.org</a>
+            <a href="/site/en.wikivoyage.org/wiki/">https://en.wikivoyage.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-09
+            2016-01-12
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-05-04
+            2016-02-06
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            2.1
+            7.1
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -488,88 +522,25 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikivoyage_2015-04-09.7z" class="external text" rel="nofollow">wiki and images</a>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikivoyage_2016-01-12_text.7z" rel="nofollow" class="external text">wiki</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikivoyage_2016-01-12_file.7z" rel="nofollow" class="external text">images</a>
           </p>
         </td>
       </tr>
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://en.wikiquote.org/wiki/">https://en.wikiquote.org</a>
+            <a href="/site/en.wikiquote.org/wiki/">https://en.wikiquote.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-09
+            2016-01-12
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-05-04
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top; text-align:right;'>
-          <p>
-            0.7
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            .xowa
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikiquote_2015-04-09.7z" class="external text" rel="nofollow">wiki and images</a>
-          </p>
-        </td>
-      </tr>
-      <tr style='color:black; border-collapse:collapse;'>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://en.wikibooks.org/wiki/">https://en.wikibooks.org</a>
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            2015-04-07
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            2015-05-04
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top; text-align:right;'>
-          <p>
-            1.8
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            .xowa
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikibooks_2015-04-07.7z" class="external text" rel="nofollow">wiki and images</a>
-          </p>
-        </td>
-      </tr>
-      <tr style='color:black; border-collapse:collapse;'>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://en.wikiversity.org/wiki/">https://en.wikiversity.org</a>
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            2015-04-05
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            2015-05-04
+            2016-02-06
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
@@ -584,29 +555,29 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikiversity_2015-04-05.7z" class="external text" rel="nofollow">wiki and images</a>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikiquote_2016-01-12.7z" rel="nofollow" class="external text">wiki and images</a>
           </p>
         </td>
       </tr>
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://en.wikinews.org/wiki/">https://en.wikinews.org</a>
+            <a href="/site/en.wikibooks.org/wiki/">https://en.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-26
+            2016-01-12
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-05-04
+            2016-02-06
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            0.5
+            2.1
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -616,29 +587,29 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikinews_2015-04-26.7z" class="external text" rel="nofollow">wiki and images</a>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikibooks_2016-01-12.7z" rel="nofollow" class="external text">wiki and images</a>
           </p>
         </td>
       </tr>
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://species.wikimedia.org/wiki/">https://species.wikimedia.org</a>
+            <a href="/site/en.wikiversity.org/wiki/">https://en.wikiversity.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-26
+            2016-01-12
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-05-04
+            2016-02-06
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            1.2
+            1.1
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -648,7 +619,71 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_specieswiki_2015-04-26.7z" class="external text" rel="nofollow">wiki and images</a>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikiversity_2016-01-12.7z" rel="nofollow" class="external text">wiki and images</a>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="/site/en.wikinews.org/wiki/">https://en.wikinews.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-01-12
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-02-06
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            0.6
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwikinews_2016-01-12.7z" rel="nofollow" class="external text">wiki and images</a>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="/site/species.wikimedia.org/wiki/">https://species.wikimedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-01-12
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-02-06
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            1.6
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_specieswiki_2016-01-12.7z" rel="nofollow" class="external text">wiki and images</a>
           </p>
         </td>
       </tr>
