--- a/image_dbs.html
+++ b/image_dbs.html
@@ -119,7 +119,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -399,7 +399,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -431,7 +431,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wiktionary.org/wiki/">https://en.wiktionary.org</a>
+            <a href="https://en.wiktionary.org/wiki/">https://en.wiktionary.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -464,7 +464,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wikisource.org/wiki/">https://en.wikisource.org</a>
+            <a href="https://en.wikisource.org/wiki/">https://en.wikisource.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -497,7 +497,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wikivoyage.org/wiki/">https://en.wikivoyage.org</a>
+            <a href="https://en.wikivoyage.org/wiki/">https://en.wikivoyage.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -530,7 +530,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wikiquote.org/wiki/">https://en.wikiquote.org</a>
+            <a href="https://en.wikiquote.org/wiki/">https://en.wikiquote.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -562,7 +562,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wikibooks.org/wiki/">https://en.wikibooks.org</a>
+            <a href="https://en.wikibooks.org/wiki/">https://en.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -594,7 +594,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wikiversity.org/wiki/">https://en.wikiversity.org</a>
+            <a href="https://en.wikiversity.org/wiki/">https://en.wikiversity.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -626,7 +626,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/en.wikinews.org/wiki/">https://en.wikinews.org</a>
+            <a href="https://en.wikinews.org/wiki/">https://en.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -658,7 +658,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/species.wikimedia.org/wiki/">https://species.wikimedia.org</a>
+            <a href="https://species.wikimedia.org/wiki/">https://species.wikimedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
