--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,15 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_NONE_.282016-02-14_19:30_Sun.29">Release: NONE (2016-02-14 19:30 Sun)</span>
+    </h2>
+    <p>
+      I'm skipping the release this week. I'm trying to make a lot of performance-related changes to Search that will affect the desktop and Android version. There's a chance I may skip next week also.
+    </p>
+    <p>
+      Also, I'm building English Wiki 2016-02 now. I'm still a little behind in wiki dumps and I'll resume this week.
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_v3.2.1.1_.282016-02-06_20:45_Sun.29">Release: v3.2.1.1 (2016-02-06 20:45 Sun)</span>
     </h2>
     <h3>
