--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,29 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_NONE_.282016-02-21_19:15_Sun.29">Release: NONE (2016-02-21 19:15 Sun)</span>
+    </h2>
+    <p>
+      I'm skipping the release this week also. I've made some good progress with search, and have a prototype that is significantly faster than the existing version. However, it'll take me another week before I add it to Android and probably two weeks before the desktop.
+    </p>
+    <p>
+      I uploaded the image update for English Wikipedia 2016-02 this week. You can grab the latest at <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-02-03_file_v2b.7z" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-02-03_file_v2b.7z</a> My next task is to make these updates easier, but I'm afraid it'll have to wait until I'm done with major Android features. I'm also postponing other image dumps as I just want to focus solely on search and related matters. I'm hoping to resume next week.
+    </p>
+    <p>
+      I am going to upload the HTML for English Wikipedia 2016-02 this week. If you want to try the new search, you should start downloading this version. Once I'm done with search, you'll have to download these two files to have the new upgraded search for Android:
+    </p>
+    <ul>
+      <li>
+        en.wikipedia.org-core.xowa
+      </li>
+      <li>
+        en.wikipedia.org-xtn.search.core.xowa
+      </li>
+    </ul>
+    <p>
+      Until then, if you're using the Android beta, please bear with the slow search. Thanks.
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_NONE_.282016-02-14_19:30_Sun.29">Release: NONE (2016-02-14 19:30 Sun)</span>
     </h2>
     <p>
