--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,15 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_NONE_.282016-02-28_20:30_Sun.29">Release: NONE (2016-02-28 20:30 Sun)</span>
+    </h2>
+    <p>
+      Another week, another postponement. My apologies, but I'm usually very cautious when making database changes -- especially since it's pretty important to get things right the first time. I'm going to try for a Thursday release, but may fall back on next Sunday.
+    </p>
+    <p>
+      I did upload the new Android English Wikipedia for 2016-02 this week. The new urls are at <a href="https://github.com/gnosygnu/xowa/issues/36#issuecomment-172428070" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/36#issuecomment-172428070</a> .
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_NONE_.282016-02-21_19:15_Sun.29">Release: NONE (2016-02-21 19:15 Sun)</span>
     </h2>
     <p>
