--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,48 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_v3.3.1.1_.28Andriod_only.29_.282016-03-06_22:00_Sun.29">Release: v3.3.1.1 (Andriod only) (2016-03-06 22:00 Sun)</span>
+    </h2>
+    <p>
+      There is no new release for the desktop app. I'm still making major changes to the Search system and need more time for review.
+    </p>
+    <p>
+      The Android app is a major release. The major change is a faster search system. To get it, do the following:
+    </p>
+    <ul>
+      <li>
+        Download the new Android apk: <a href="https://github.com/gnosygnu/xowa/releases/tag/v3.3.1.1" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/releases/tag/v3.3.1.1</a> 
+        <ul>
+          <li>
+            Note: I changed the application ID, so make sure you remove the old XOWA app, or you will have 2 XOWA apps. If you do end up with 2 of them, remove both, and reinstall v3.3.1.1 again
+          </li>
+        </ul>
+      </li>
+      <li>
+        Download the new core English Wikipedia files (1.6 GB): <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-02-04_html_core_v2.7z" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-02-04_html_core_v2.7z</a>
+      </li>
+    </ul>
+    <p>
+      Here is a brief summary of the advantages:
+    </p>
+    <ul>
+      <li>
+        Better performance: Search is much quicker. One word searches should come back subsecond and multiple words should come back in a few, with initial results coming back in the first second
+      </li>
+      <li>
+        Better ranking: Search now ranks results by <a href="/site/en.wikipedia.org/wiki/PageRank">page rank</a>. Previously, XOWA ranks by page length, which resulted in long "List of" articles appearing near the top.
+      </li>
+      <li>
+        Better search terms: Search now handles punctuation better. Searches can be done for "U.S.A." or "USA"; "dont't" or "dont"; "half-life" or "half" or "life".
+      </li>
+    </ul>
+    <p>
+      I'll explain these in greater detail in the next desktop release.
+    </p>
+    <p>
+      If you are using the Android beta, I strongly recommend you get this version. The new search is dramatically improved and well worth the effort.
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_NONE_.282016-02-28_20:30_Sun.29">Release: NONE (2016-02-28 20:30 Sun)</span>
     </h2>
     <p>
