--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,21 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class="mw-headline" id="Release:_NONE_.282016-03-20_22:00_Sun.29">Release: NONE (2016-03-20 22:00 Sun)</span>
+    </h2>
+    <p>
+      I'm postponing this week's release. I'm also done with the desktop integration of the new search system, but I still want to make a few more changes and feel that a few more days would help.
+    </p>
+    <p>
+      I did upload new updates for English Wikipedia this week. See <a href="https://archive.org/download/Xowa_enwiki_latest" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest</a> and the 2016-03-05 files. I'll update the links later to point to them.
+    </p>
+    <p>
+      I'll try to upload a new Android release later this week. This will mostly have small tweaks for the new search system.
+    </p>
+    <p>
+      <br>
+    </p>
+    <h2>
       <span class="mw-headline" id="Release:_v3.3.2.1_.28Andriod_only.29_.282016-03-13_22:00_Sun.29">Release: v3.3.2.1 (Andriod only) (2016-03-13 22:00 Sun)</span>
     </h2>
     <p>
